--- a/frontend/src/componnents/singup/SignupForm.css
+++ b/frontend/src/componnents/singup/SignupForm.css
@@ -6,10 +6,9 @@
     background-color: #f5f5f5;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    inset: 0;
+    position: fixed;
+    inset: 10%;
     height: fit-content;
-    top: 62px;
   }
   
   h2 {
